Fix back button on success screen. Fix dropdown option description overflowing to second line (#684)

--- a/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -119,6 +119,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+	width: 300px;
 }
 
 @mixin option-font {
